@@ -1,5 +1,13 @@
 2010-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>
 
+	* flumotion/common/signals.py:
+	* flumotion/component/effects/deinterlace/admin_gtk.py:
+	* flumotion/manager/component.py:
+	* flumotion/job/main.py:
+	  Remove unused imports.
+
+2010-12-28  Thomas Vander Stichele  <thomas at apestaart dot org>
+
 	* flumotion/component/converters/overlay/overlay.py:
 	  Pychecker caught two mistakes, globals that are in fact self
 	  attributes.
